<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.movies.MovieDetailActivity">

        <ImageView
            android:id="@+id/detail_movie_img"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginBottom="40dp" />

        <TextView
            android:id="@+id/movie_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_template"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_movie_img"
            app:layout_constraintTop_toTopOf="@+id/detail_movie_img" />

        <TextView
            android:id="@+id/rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_text"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/movie_detail_title"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_title"/>

        <TextView
            android:id="@+id/movie_detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_template"
            android:textSize="20sp"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginStart="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/rating_text"
            app:layout_constraintStart_toEndOf="@id/rating_text"
            app:layout_constraintTop_toTopOf="@id/rating_text" />

        <TextView
            android:id="@+id/rating_constant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/per_rating"
            app:layout_constraintBottom_toBottomOf="@+id/movie_detail_rating"
            app:layout_constraintStart_toEndOf="@+id/movie_detail_rating"
            app:layout_constraintTop_toTopOf="@+id/movie_detail_rating" />

        <TextView
            android:id="@+id/popularity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity_text"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/rating_text"
            app:layout_constraintTop_toBottomOf="@id/rating_text"/>

        <TextView
            android:id="@+id/movie_detail_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity_template"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/movie_detail_rating"
            app:layout_constraintTop_toTopOf="@+id/popularity_text" />

        <TextView
            android:id="@+id/genre_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_text"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/popularity_text"
            app:layout_constraintTop_toBottomOf="@id/popularity_text"/>

        <TextView
            android:id="@+id/movie_detail_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/genre_template"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/movie_detail_popularity"
            app:layout_constraintTop_toTopOf="@id/genre_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <TextView
            android:id="@+id/original_language_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_language_text"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/movie_detail_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_template"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/original_language_text"
            app:layout_constraintTop_toBottomOf="@id/original_language_text"/>

        <TextView
            android:id="@+id/text_adult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/adult_text"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/movie_detail_language"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_language" />
        <TextView
            android:id="@+id/movie_detail_adult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult_template"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/text_adult"
            app:layout_constraintTop_toBottomOf="@id/text_adult"/>

        <TextView
            android:id="@+id/text_production_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/production_company_text"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/movie_detail_adult"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_adult"/>

        <TextView
            android:id="@+id/movie_detail_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/detail_company_template"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_production_company"
            app:layout_constraintTop_toBottomOf="@id/text_production_company" />

        <TextView
            android:id="@+id/text_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview_text"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/movie_detail_company"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_company"/>
        <TextView
            android:id="@+id/movie_detail_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/example_lorem"
            android:textColor="@android:color/black"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="@id/text_overview"
            app:layout_constraintTop_toBottomOf="@id/text_overview"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>