<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movie_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:id="@+id/movieitem_img"
            android:layout_width="150dp"
            android:layout_height="175dp"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="fitCenter"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movieitem_judul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:text="@string/title_template"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/movieitem_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_text"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/movieitem_judul"
            app:layout_constraintTop_toBottomOf="@id/movieitem_judul" />

        <TextView
            android:id="@+id/movieitem_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textSize="14sp"
            android:text="@string/rating_template"
            app:layout_constraintBottom_toBottomOf="@+id/rating"
            app:layout_constraintStart_toEndOf="@id/rating"
            app:layout_constraintTop_toTopOf="@id/rating" />

        <TextView
            android:id="@+id/constant_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/per_rating"
            app:layout_constraintBottom_toBottomOf="@+id/movieitem_rating"
            app:layout_constraintStart_toEndOf="@id/movieitem_rating"
            app:layout_constraintTop_toTopOf="@id/movieitem_rating" />

        <TextView
            android:id="@+id/movieitem_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:maxLines="4"
            android:textSize="12sp"
            android:ellipsize="end"
            android:text="@string/example_lorem"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/rating"
            app:layout_constraintTop_toBottomOf="@id/rating"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>